@@ -18,11 +18,18 @@ for arg in "$@"; do
 done
 
 JVM_OPTS=(
-    "-XX:+UseCompressedOops"
+    "-XX:+UseZGC"
     "-XX:+AlwaysPreTouch"
-    "-XX:-UseBiasedLocking"
-    "-XX:+UseG1GC"
-    "-XX:MaxGCPauseMillis=1"
+    "-XX:MaxDirectMemorySize=1024m"
+    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
+    "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED"
+    "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED"
+    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+    "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+    "--add-opens=java.base/java.io=ALL-UNNAMED"
+    "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+    "--add-opens=java.base/java.util=ALL-UNNAMED"
     "-Djava.lang.Integer.IntegerCache.high=65536"
     "-Demporia.disruptor.cpu-set=${CPU_CORE}"
     "-Demporia.disruptor.numa-node=${NUMA_NODE}"
